修改redis-pvc.yaml

--- a/redis/redis-pvc.yaml
+++ b/redis/redis-pvc.yaml
@@ -4,9 +4,10 @@ metadata:
   name: pvc-evs-redis-6379
   namespace: my-space
 spec:
+  volumeName: pv-evs-redis-6379
   accessModes:
-  - ReadWriteMany
+   - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 30Gi
   storageClassName: "csi-disk"  # 这里指定storageClass名称
